2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspClientRequest): Remove handling
	of 's' and 'S'.
	(GdbServer::rspStep()): Delete.
	(GdbServer::rspStep(bool,uint32_t,TargetSignal): Delete.
	(GdbServer::rspVCont): Remove handling of 's' actions.
	(GdbServer::extractVContAction): Remove handling of 's' and 'S'
	actions.
	(GdbServer::doStep): Delete.
	* src/GdbServer.h (GdbServer) <rspStep, doStep>: Remove
	declarations.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspQuery): Remove handling of the
	qTStatus packet.
	(GdbServer::rspSet): Remove handling of the 'QTStart', 'QTStop',
	'QTinit', 'QTDP', 'QFrame' and 'QTro' packets.
	* src/TargetControl.h (TargetControl) <initTrace, startTrace,
	stopTrace>: Remove declarations.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::initTrace)
	(TargetControlHardware::startTrace)
	(TargetControlHardware::stopTrace): Delete.
	* src/TargetControlHardware.h (TargetControlHardware) <initTrace,
	startTrace, stopTrace>: Remove declarations.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspRemoveMatchpoint)
	(GdbServer::rspInsertMatchpoint): Return unknown packet for any
	matchpoint other than z0/Z0.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspUnknownPacket): New method.
	(GdbServer::rspClientRequest): Use rspUnknownPacket.  Remove
	handling of 'A', 'b', 'B', 'd', 'i', 'I', 'r', 'qCRC',
	'qGetTLSAddr', 'qL', 'qOffsets', 'qP' and 'qSymbol'.
	(GdbServer::rspSet): Remove handling of QPassSignals.  Use
	rspUnknownPacket and don't delete the packet.
	(GdbServer::rspVpkt): Remove handling of 'vFile' 'vFlashErase',
	'vFlashWrite' and 'vFlashDone'.  Use rspUnknownPacket.
	* src/GdbServer.h (GdbServer::rspUnknownPacket): Declare.

2014-10-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspRemoveMatchpoint): Ensure
	breakpoints are set in all threads.