@@ -353,16 +353,6 @@ GdbServer::rspClientRequest ()
       rspReportException (-1 /*all threads */ , TARGET_SIGNAL_TRAP);
       break;
 
-    case 'c':
-      // Continue
-      rspContinue (TARGET_SIGNAL_NONE);
-      break;
-
-    case 'C':
-      // Continue with signal (in the packet)
-      rspContinue ();
-      break;
-
     case 'D':
       // Detach GDB. Do this by closing the client. The rules say that
       // execution should continue, so unstall the processor.
@@ -517,266 +507,6 @@ GdbServer::rspReportException (int          tid,
   rsp->putPkt (pkt);
 
 }	// rspReportException()
-
-
-//-----------------------------------------------------------------------------
-//! Handle a RSP continue request
-
-//! This version is typically used for the 'c' packet, to continue without
-//! signal, in which case TARGET_SIGNAL_NONE is passed in as the exception to
-//! use.
-
-//! At present other exceptions are not supported
-
-//! @param[in] except  The GDB signal to use
-//-----------------------------------------------------------------------------
-void
-GdbServer::rspContinue (uint32_t except __attribute ((unused)) )
-{
-  uint32_t     addr;		// Address to continue from, if any
-  uint32_t  hexAddr;		// Address supplied in packet
-  Thread *thread = getThread (currentCTid);
-
-  // Reject all except 'c' packets
-  if ('c' != pkt->data[0])
-    {
-      cerr << "Warning: Continue with signal not currently supported: "
-	<< "ignored" << endl;
-      return;
-    }
-
-  // Get an address if we have one
-  if (0 == strcmp ("c", pkt->data))
-    addr = thread->readPc ();		// Default uses current PC
-  else if (1 == sscanf (pkt->data, "c%" SCNx32, &hexAddr))
-    addr = hexAddr;
-  else
-    {
-      cerr << "Warning: RSP continue address " << pkt->data
-	<< " not recognized: ignored" << endl;
-      addr = thread->readPc ();		// Default uses current NPC
-    }
-
-  rspContinue (addr, TARGET_SIGNAL_NONE);
-
-}				// rspContinue()
-
-
-//-----------------------------------------------------------------------------
-//! Handle a RSP continue with signal request
-
-//! @todo Currently does nothing. Will use the underlying generic continue
-//!       function.
-//-----------------------------------------------------------------------------
-void
-GdbServer::rspContinue ()
-{
-  Thread* thread = getThread (currentCTid);
-
-  if (si->debugTrapAndRspCon ())
-    cerr << "RSP continue with signal '" << pkt->
-      data << "' received" << endl;
-
-  //return the same exception
-  TargetSignal sig = TARGET_SIGNAL_TRAP;
-
-  if ((0 == strcmp ("C03", pkt->data)))
-    {				//get continue with signal after reporting QUIT/exit, silently ignore
-
-      sig = TARGET_SIGNAL_QUIT;
-
-    }
-  else
-    {
-      cerr << "WARNING: RSP continue with signal '" << pkt->
-	data << "' received, the server will ignore the continue" << endl;
-
-      //check the exception state
-      sig = (TargetSignal) thread->getException ();
-    }
-
-  // report to gdb the target has been stopped
-  rspReportException (-1 /* all threads */ , sig);
-
-}	// rspContinue()
-
-
-//-----------------------------------------------------------------------------
-//! Generic processing of a continue request
-
-//! The signal may be TARGET_SIGNAL_NONE if there is no exception to be
-//! handled. Currently the exception is ignored.
-
-//! @param[in] addr    Address from which to continue
-//! @param[in] except  The exception to use (if any). Currently ignored
-//-----------------------------------------------------------------------------
-void
-GdbServer::rspContinue (uint32_t addr, uint32_t except __attribute ((unused)))
-{
-  Thread* thread = getThread (currentCTid);
-
-  if ((!fIsTargetRunning && si->debugStopResume ()) || si->debugTranDetail ())
-    {
-      cerr << "GdbServer::rspContinue PC 0x" << hex << addr << dec << endl;
-    }
-
-  uint32_t prevPc = 0;
-
-  if (!fIsTargetRunning)
-    {
-      if (! thread->isHalted ())
-	{
-	  //cerr << "********* isTargetInDebugState = false **************" << endl;
-
-	  //cerr << "Internal Error(DGB server): Core is not in HALT state while the GDB is asking the cont" << endl;
-	  //pkt->packStr("E01");
-	  //rsp->putPkt(pkt);
-	  //exit(2);
-
-	  fIsTargetRunning = true;
-	}
-      else
-	{
-	  //cerr << "********* isTargetInDebugState = true **************" << endl;
-
-	  //set PC
-	  thread->writePc (addr);
-
-	  //resume
-	  thread->resume ();
-	}
-    }
-
-  unsigned long timeout_me = 0;
-  unsigned long timeout_limit = 100;
-
-  timeout_limit = 3;
-
-  while (true)
-    {
-      //cerr << "********* while true **************" << endl;
-
-      Utils::microSleep (300000);		// 300 ms
-
-      timeout_me += 1;
-
-      //give up control and check for CTRL-C
-      if (timeout_me > timeout_limit)
-	{
-	  //cerr << "********* timeout me > limit **************" << endl;
-	  //cerr << " PC << " << hex << readPc() << dec << endl;
-	  assert (fIsTargetRunning);
-	  break;
-	}
-
-      //check the value of debug register
-
-      if (thread->isHalted ())
-	{
-	  //cerr << "********* isTargetInDebugState = true **************" << endl;
-
-	  // If it's a breakpoint, then we need to back up one instruction, so
-	  // on restart we execute the actual instruction.
-	  uint32_t c_pc = thread->readPc ();
-	  //cout << "stopped at @pc " << hex << c_pc << dec << endl;
-	  prevPc = c_pc - SHORT_INSTRLEN;
-
-	  //check if it is trap
-	  uint16_t val_;
-	  thread->readMem16 (prevPc, val_);
-	  uint16_t valueOfStoppedInstr = val_;
-
-	  if (valueOfStoppedInstr == BKPT_INSTR)
-	    {
-	      //cerr << "********* valueOfStoppedInstr = BKPT_INSTR **************" << endl;
-
-	      if (mpHash->lookup (BP_MEMORY, prevPc, currentCTid))
-		{
-		  thread->writePc (prevPc);
-		  if (si->debugTrapAndRspCon ())
-		    cerr << dec << "set pc back " << hex << prevPc << dec << endl
-		     ;
-		}
-
-	      if (si->debugTrapAndRspCon ())
-		cerr <<
-		  dec << "After wait CONT GdbServer::rspContinue PC 0x" <<
-		  hex << prevPc << dec << endl;
-
-	      // report to gdb the target has been stopped
-
-
-	      rspReportException (-1 /*all threads */ , TARGET_SIGNAL_TRAP);
-
-
-
-	    }
-	  else
-	    {			// check if stopped for trap (stdio handling)
-	      //cerr << "********* valueOfStoppedInstr =\\= BKPT_INSTR **************" << endl;
-
-	      bool stoppedAtTrap =
-		(getfield (valueOfStoppedInstr, 9, 0) == TRAP_INSTR);
-	      if (!stoppedAtTrap)
-		{
-		  //cerr << "********* stoppedAtTrap = false **************" << endl;
-		  //try to go back an look for trap // bug in the design !!!!!!!!!!!!!!
-		  if (si->debugTrapAndRspCon ())
-		    cerr << dec << "missed trap ... looking backward for trap "
-		      << hex << c_pc << dec << endl;
-
-
-		  if (valueOfStoppedInstr == NOP_INSTR)
-		    {		//trap is always padded by nops
-		      for (uint32_t j = prevPc - 2; j > prevPc - 20;
-			   j = j - 2 /* length of */ )
-			{
-			  //check if it is trap
-
-			  thread->readMem16 (j, val_);
-			  valueOfStoppedInstr = val_;
-
-			  stoppedAtTrap =
-			    (getfield (valueOfStoppedInstr, 9, 0) ==
-			     TRAP_INSTR);
-			  if (stoppedAtTrap)
-			    {
-			      if (si->debugStopResumeDetail ())
-				cerr << dec <<
-				  "trap found @" << hex << j << dec << endl;
-			      break;
-
-			    }
-			}
-		    }
-
-
-		}
-
-	      if (stoppedAtTrap)
-		{
-		  //cerr << "********* stoppedAtTrap = true **************" << endl;
-		  haltAllThreads ();
-		  fIsTargetRunning = false;
-		  redirectStdioOnTrap (thread,
-				       getTrap (valueOfStoppedInstr));
-		}
-	      else
-		{
-		  //cerr << "********* stoppedAtTrap = false **************" << endl;
-		  if (si->debugStopResumeDetail ())
-		    cerr << dec << " no trap found, return control to gdb" <<
-		      endl;
-		  // report to gdb the target has been stopped
-		  rspReportException (-1 /* all threads */ ,
-				      TARGET_SIGNAL_TRAP);
-		}
-	    }
-
-	  break;
-	}			// if (isCoreInDebugState())
-    }				// while (true)
-}	// rspContinue()
 
 
 //-----------------------------------------------------------------------------
